Couldnt make lives work quickly. and my game was bugging way too much, so im going to fork it and work in that one so that i don't break my working game

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: ArcadeClassic;
-  src: url(../ARCADECLASSIC.TTF);
+  src: url(../fonts/ARCADECLASSIC.TTF);
 }
 
 * {
